# Boost_erSeat

./: .gitignore  1_82345-example.html  CMakeLists.txt  CNAME  README.md  README_8md.html  _2home_2runner_2work_2Boost_erSeat_2Boost_erSeat_2include_2BoosterSeat_2rolling_average_8hpp-example.html  annotated.html  annotated_dup.js  classBoosterSeat_1_1BoosterSeatException-members.html  classBoosterSeat_1_1BoosterSeatException.html  classBoosterSeat_1_1BoosterSeatException.js  classBoosterSeat_1_1BoosterSeatException__coll__graph.map  classBoosterSeat_1_1BoosterSeatException__coll__graph.md5  classBoosterSeat_1_1BoosterSeatException__inherit__graph.map  classBoosterSeat_1_1BoosterSeatException__inherit__graph.md5  classBoosterSeat_1_1BoosterSeatException_a968460b38d7c6c517cdc659ee0b5b288_icgraph.map  classBoosterSeat_1_1BoosterSeatException_a968460b38d7c6c517cdc659ee0b5b288_icgraph.md5  classBoosterSeat_1_1RollingAverage-members.html  classBoosterSeat_1_1RollingAverage.html  classBoosterSeat_1_1RollingAverage.js  classBoosterSeat_1_1RollingAverage__coll__graph.map  classBoosterSeat_1_1RollingAverage__coll__graph.md5  classBoosterSeat_1_1RollingAverage_a33c74423b0c8de287e5b37be30d986d4_icgraph.map  classBoosterSeat_1_1RollingAverage_a33c74423b0c8de287e5b37be30d986d4_icgraph.md5  classBoosterSeat_1_1RollingAverage_a5d187eab72c312ce4ab296e9c2c89bef_icgraph.map  classBoosterSeat_1_1RollingAverage_a5d187eab72c312ce4ab296e9c2c89bef_icgraph.md5  classBoosterSeat_1_1RollingAverage_ad927809ecf661a73615742a9f9c465d7_icgraph.map  classBoosterSeat_1_1RollingAverage_ad927809ecf661a73615742a9f9c465d7_icgraph.md5  classBoosterSeat_1_1Stopwatch-members.html  classBoosterSeat_1_1Stopwatch.html  classBoosterSeat_1_1Stopwatch.js  classBoosterSeat_1_1Stopwatch__coll__graph.map  classBoosterSeat_1_1Stopwatch__coll__graph.md5  classBoosterSeat_1_1Stopwatch_a1730583411cfbdb101390934cede9354_icgraph.map  classBoosterSeat_1_1Stopwatch_a1730583411cfbdb101390934cede9354_icgraph.md5  classBoosterSeat_1_1Stopwatch_a343df75d520759131fb0bbe23552a854_icgraph.map  classBoosterSeat_1_1Stopwatch_a343df75d520759131fb0bbe23552a854_icgraph.md5  classBoosterSeat_1_1Stopwatch_a6d01ecc80c92f1d5210cd9c3eb72883d_icgraph.map  classBoosterSeat_1_1Stopwatch_a6d01ecc80c92f1d5210cd9c3eb72883d_icgraph.md5  (+1049 more)
.github/workflows/: doxygen_publish.yml  tests.yaml
doc/: geo.md  process.md  random.md  science.md
include/BoosterSeat/: clock.hpp  exception.hpp  filesystem.hpp  filters.hpp  geo.hpp  geo_strings.hpp  math.hpp  numbers.hpp  process.hpp  random.hpp  rolling_average.hpp  science.hpp  sleep.hpp  stopwatch.hpp  string_formatting.hpp  string_utils.hpp  template_tools.hpp  time.hpp  timer.hpp
include/Bst/: clock.hpp  exception.hpp  geo_strings.hpp  numbers.hpp  random.hpp  rolling_average.hpp  sleep.hpp  stopwatch.hpp  string_utils.hpp  template_tools.hpp  time.hpp  timer.hpp
include/Bst/Embd/: assert.hpp  embd.hpp  gpio.hpp  pins.hpp  stopwatch.hpp  uart.hpp
lib/stm32/: CMakeLists.txt  stubs.cpp
lib/stm32/CMSIS/: CMakeLists.txt
lib/stm32/Middlewares/ST/STM32_USB_Device_Library/: CMakeLists.txt
lib/stm32/STM32F4xx_HAL_Driver/: CMakeLists.txt
project/doxygen/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+77 more)
src/: filesystem.cpp  numbers.cpp  process.cpp  random.cpp  rolling_average.cpp  science.cpp  stopwatch.cpp  string_format.cpp  time.cpp  timer.cpp
src/embedded/stm32/: gpio.cpp  stopwatch.cpp  uart.cpp
src/geo/: geo_point.cpp  geo_strings.cpp
tests/: CMakeLists.txt  filesystem_test.cpp  filters_test.cpp  geo_test.cpp  process_test.cpp  random_test.cpp  rolling_average_test.cpp  science_test.cpp  stopwatch_test.cpp  string_format_test.cpp  time_class_test.cpp  time_output_test.cpp  time_string_test.cpp  timer_test.cpp  visual_tests.cpp
tests/embd/: embd_unit_tests.hpp  test_gpio.cpp
toolchains/: gcc_linux_host.cmake
